--- a/src/main/webapp/styles.css
+++ b/src/main/webapp/styles.css
@@ -50,7 +50,7 @@ input[type="radio"], input[type="checkbox"] {
 button {
     width: 100%;
     padding: 12px;
-    background-color: #00796b;
+    background-color: #007967;
     color: white;
     border: none;
     border-radius: 5px;
