--- a/src/main/webapp/css/loginALL.css
+++ b/src/main/webapp/css/loginALL.css
@@ -2,7 +2,7 @@ body {
     margin: 0;
     padding: 0;
     font-family: Arial, sans-serif;
-    background-color: #eaf7fb; /* Light blue background */
+    background-color: #eafbf8; /* Light green background */
 }
 
 .container {
@@ -41,14 +41,14 @@ body {
     font-weight: bold;
     border: none;
     border-radius: 5px;
-    background-color: #007bff;
+    background-color: rgba(16, 121, 0, 0.89);
     color: white;
     cursor: pointer;
     transition: background-color 0.3s ease;
 }
 
 .container button:hover {
-    background-color: #0056b3;
+    background-color: #48b300;
 }
 
 .container button:active {
